test/code/test_restore_exception_handler_nofunc.php
<?php
function manejador_excepciones($excepci贸n) {
  echo "Excepci贸n no capturada: " , $excepci贸n->getMessage(), "\n";
}

set_exception_handler('manejador_excepciones');
set_exception_handler('other');
var_dump(restore_exception_handler());

throw new Exception('Excepci贸n No Capturada');
echo "No Ejecutado\n";
